# UIML

./: CMakeLists.txt  README.en.md  README.md  TARS_Go电控组编码规范.md  tutorial.md
README/: README.md
chassis/: chassisMcNamm.c  chassisMcNamm.h  slope.c  slope.h
cmake/: UimlUtil.cmake
conf/: CMakeLists.txt  README.md  config.c  config.h  sysConf.h  sys_conf.h
conf/README/: README.md
inc/bmi088/: AHRS.h  AHRS_middleware.h
motor/: M2006.c  M2006.h  M3508.c  M3508.h  M6020.c  M6020.h  Motor.c  Motor.h  PID.c  PID.h
serviceClass/chassis/: chassisMecanum.c
services/bsp/: README.md  bsp_can.c  bsp_exti.c  bsp_spi.c  bsp_tim.c  bsp_usart.c
services/chassis/: README.md  chassis_mecanum.c
services/control/: README.md  chassis_contorl.c  sys_control.c  sys_control.h
services/gimbal/: README.md  gimbal.c
services/imu/: BMI088Middleware.c  BMI088Middleware.h  BMI088driver.c  BMI088driver.h  imu_bmi088.c
services/ins/: README.md  ins.c
services/judgement/: README.md  judge.c  judge_drive.c  judge_drive.h
services/rc/: README.md  rc.c
services/shoot/: README.md  shoot.c
softbus/: CMakeLists.txt  README.md  softbus.c  softbus.h
toolClass/motor/: Motor.c  Motor.h
toolClass/universal_vector/: README.md  vector.c  vector.h
tools/: CMakeLists.txt
tools/controller/: README.md  pid.c  pid.h
tools/crc/: crc16_modbus.c  crc_dji.c  crc_dji.h
tools/first_order_filter/: filter.c  filter.h  kalman.c  low_pass.c  mean.c
tools/include/: crc16_modbus.h  crc_dji.h  filter.h  motor.h  my_queue.h  pid.h  slope.h  vector.h
tools/motor/: Motor.c  Motor.h  (+3 more)
(+31 files in other folders)
